--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/parser": "^5.41.1-alpha.11",
     "@vitejs/plugin-react": "^2.1.0",
+    "eslint": "8.7.0",
+    "prettier": "2.5.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
