--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "yes-i-do",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:3001/api",
   "scripts": {
     "dev": "vite",
+    "server": "node server/index.mjs",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "firebase": "^9.12.1",
     "materialize": "^1.0.0",
     "materialize-css": "^1.0.0-rc.2",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
+    "@types/materialize-css": "^1.0.11",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/parser": "^5.41.1-alpha.11",
